--- a/pom.xml
+++ b/pom.xml
@@ -87,13 +87,19 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
             </plugin>
-            
             <plugin>
-                <groupId>org.sonarsource.scanner.maven</groupId>
-                <artifactId>sonar-maven-plugin</artifactId>
-                <version>3.4.0.905</version>
-            </plugin>
-
+					<groupId>org.sonarsource.scanner.maven</groupId>
+					<artifactId>sonar-maven-plugin</artifactId>
+					<version>3.3.0.603</version>
+					<executions>
+					<execution>
+					<phase>verify</phase>
+					<goals>
+					<goal>sonar</goal>
+					</goals>
+					</execution>
+					</executions>
+			</plugin>	
         </plugins>
     </build>
 
