upadted properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.username=postgres
 spring.datasource.password=P@$$w0rd
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+sonar.login = ashwinisingh25@github.com
+sonar.password= Taknikee@2048
